# Maas-Anomali

./: .env.example  .gitignore  MaasAnomali.py  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/app/: main.py
src/app/api/: router.py  schemas.py
src/app/core/: config.py
src/app/db/: models.py  session.py
src/app/services/: anomaly_service.py  pdf_service.py
